--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "jade": "^1.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^4.7.4"
   }
 }
